[package]
name = "up_impl"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug"]
debug = []

[dependencies]
async-trait = "0.1.83"
either = "1.13.0"
proc-macro2 = "1.0.89"
quote = "1.0.37"
serde_yaml = "0.9.34"
syn = "2.0.85"
tokio = { version = "1.41.0", features = ["full", "test-util"] }
